<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<groupId>space.arim.injector</groupId>
	<artifactId>injector</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	
	<name>SolidInjector</name>
	<description>Modern and lightweight injector supporting javax and jarkarta.</description>
	<url>https://github.com/A248/SolidInjector</url>
	<inceptionYear>2020</inceptionYear>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<junit.version>5.7.0</junit.version>
	</properties>
	
	<scm>
		<connection>scm:git:git://github.com/A248/SolidInjector.git</connection>
		<developerConnection>scm:git:ssh://github.com:A248/SolidInjector.git</developerConnection>
		<url>http://github.com/A248/SolidInjector/tree/master</url>
	</scm>
	
	<licenses>
		<license>
			<name>GNU Lesser General Public License, Version 3</name>
			<url>https://www.gnu.org/licenses/lgpl-3.0-standalone.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	
	<developers>
		<developer>
			<id>anandbeh</id>
			<name>Anand Beh</name>
			<email>anandebeh@gmail.com</email>
			<url>https://github.com/A248</url>
			<roles>
				<role>creator</role>
				<role>developer</role>
			</roles>
			<timezone>America/New_York</timezone>
		</developer>
	</developers>
	
	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>
	
	<build>
		<plugins>
			<!-- JAR creation -->
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
				<executions>
					<execution>
						<id>default-compile</id>
						<configuration>
							<source>11</source>
							<target>11</target>
						</configuration>
					</execution>
					<execution>
						<id>base-compile</id>
						<goals>
							<goal>compile</goal>
						</goals>
						<configuration>
							<excludes>
								<exclude>module-info.java</exclude>
							</excludes>
						</configuration>
					</execution>
					<execution>
						<id>default-testCompile</id>
						<configuration>
							<source>11</source>
							<target>11</target>
						</configuration>
					</execution>
				</executions>
			</plugin>
			
			<!-- Testing -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<trimStackTrace>false</trimStackTrace>
					<argLine>-Xverify:none -XX:TieredStopAtLevel=1 -XX:-TieredCompilation
					--add-modules jakarta.inject,java.inject
					--add-opens space.arim.injector/space.arim.injector.internal.spec=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>

			<!-- Sources and javadoc -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<source>8</source>
					<excludePackageNames>space.arim.injector.internal:space.arim.injector.internal.*</excludePackageNames>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>javadoc</goal>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	
	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.6</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
								<configuration>
									<gpgArguments>
										<arg>--pinentry-mode</arg>
										<arg>loopback</arg>
									</gpgArguments>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>1.6.8</version>
						<extensions>true</extensions>
						<configuration>
							<serverId>ossrh</serverId>
							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
							<autoReleaseAfterClose>false</autoReleaseAfterClose>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	
	<dependencies>
		<!-- Both dependencies are optional, so users can choose between them. -->
		<dependency>
			<groupId>javax.inject</groupId>
			<artifactId>javax.inject</artifactId>
			<version>1</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>jakarta.inject</groupId>
			<artifactId>jakarta.inject-api</artifactId>
			<version>2.0.0</version>
			<optional>true</optional>
		</dependency>
		<!--
		See module-info for a description of the state of JPMS with respect to the javax.inject namespace
		 It would normally not be possible to depend on both jakarta.inject 1.0.3
		and 2.0.0. However, this hack is required for building against the module java.inject.
		-->
		<dependency>
			<groupId>jakarta.inject.</groupId>
			<artifactId>jakarta.inject-api</artifactId>
			<version>1.0.3</version>
			<scope>provided</scope>
		</dependency>

		<!-- Test dependencies -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency> <!-- Junit Vintage is needed for TCK -->
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>javax.inject</groupId>
			<artifactId>javax.inject-tck</artifactId>
			<version>1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>